--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-original_repo: https://github.com/vlctechhub/11defebrero
+original_repo: https://github.com/cecivieira/wids-valencia
 
 volunteers_form: ""
 mentors_form: ""
-attendees_form: https://www.eventbrite.es/e/entradas-cafe-coloquio-con-tecnologas-54521806190
+attendees_form: https://wids-valencia-2019.eventbrite.es
 
-keywords: "café, coloquio, debate, VLCTechHub, DevWomen, FemDevs, mujer, tecnología, Valencia, evento, febrero"
-title: "Café coloquio con tecnólogas - 7 de febrero - VLCTechHub"
-description: "Vente al café coloquio con tecnólogas a charlar sobre mujer y tecnología el 7 de febrero, 2019 Valencia. Es una actividad dentro de la iniciativa 11 de Febrero organizada por VLCTechHub, DevWomen y FemDevs."
-ogimage: "https://11defebrero.vlctechhub.org/assets/images/cartel-11f-actividades.jpg"
+keywords: "conferencia, ciencia de datos, mujer, tecnología, Valencia, evento, marzo, UPV, MUGI, VLCTechHub"
+title: "WiDS Valencia"
+description: "Women in Data Science Valencia será celebrado en en 04 de marzo de 2019. El evento tiene el objetivo de inspirar personas para la Ciencia de Datos y el área de tecnología a partir de la divulgación de trabajo de mujeres científica de datos, que sea en el campo de la investigación o el mercado laboral."
+ogimage: "/assets/images/Cartel.png"
 
 sass:
     sass_dir: assets/_sass
