--- a/_data/faq.yaml
+++ b/_data/faq.yaml
@@ -1,20 +1,8 @@
-- question: ¿A quién va dirigido este evento?
-  answer: Esta charla va dirigida a personas profesionales y estudiantes de tecnología.
-- question: ¿Qué es una conversación fishbowl?
-  answer: Es un tipo de diálogo donde cualquier participante puede hablar. Se pondrán cinco asientos para cuatro ponentes iniciales que abriran la conversación con la pregunta del evento. Cuando alguien de los asistentes quiere comentar o aportar algo debe ocupar el asiento libre. En ese momento alguno de los cuatro ponentes iniciales debe marcharse, para siempre dejar un asiento libre.
-- question: ¿Es gratuito el evento?
-  answer: Cada asistente deberá hacer una consumición mínima en el local, no te preocupes, hay precios populares ;)
-- question: Soy estudiante y esto del 'éxito en el mundo profesional' me pilla un poco lejos, ¿esto es para mí?
-  answer: Claro, es una buena oportunidad para charlar e intercambiar opiniones con mujeres que están recorriendo el camino.
-- question: ¿Habrá comida?
-  answer: El coloquio se celebra en un local donde puedes comprarte un café, una cerveza o algo de comer.
-- question: ¿Cuándo se abre el registro?
-  answer: El 7 de enero, justo un mes antes.
 - question: Soy un hombre, ¿puedo asistir?
-  answer: Sí. Es una jornada para conversar con mujeres sobre mujeres y tecnología y cualquiera puede asistir.
-- question: No conozco a nadie, pero me interesa el tema, ¿debería ir?
-  answer: Por supuesto, es una gran oportunidad de conocer a mujeres que se dedican a la tecnología!
-- question: Voy a asitir al evento y me gustaría aparecer con mi bio en esta web, ¿qué tengo que hacer?
-  answer: Puedes abrir un pull request con tus cambios. Si no tienes claro como hacerlo, ponte en contacto por correo.
+  answer: Sí. Es una jornada para conversar sobre Ciencia de Datos y tecnología y cualquiera puede asistir.
+- question: ¿Es gratuito?
+  answer: Sí, todo el evento es gratuito.
+- question: ¿A quién va dirigido este evento?
+  answer: Esta jornada va dirigida a personas, sin distinción de género, que tienen interés en Ciencia de Datos.
 - question: ¿Tienes alguna pregunta más?
-  answer: "Contacta por correo en [hola@vlctechhub.org](mailto:hola@vlctechhub.org)"
+  answer: "Contacta por correo en [widsvalencia@gmail.com](mailto:widsvalencia@gmail.com)"
