--- a/_data/faq.yaml
+++ b/_data/faq.yaml
@@ -4,5 +4,5 @@
   answer: Sí, todo el evento es gratuito.
 - question: ¿A quién va dirigido este evento?
   answer: Esta jornada va dirigida a personas, sin distinción de género, que tienen interés en Ciencia de Datos.
-- question: ¿Tienes alguna pregunta más?
-  answer: "Contacta por correo en [widsvalencia@gmail.com](mailto:widsvalencia@gmail.com)"
+- question: ¿Te gustaría saber más?
+  answer: "Escríbenos a [widsvalencia@gmail.com](mailto:widsvalencia@gmail.com)"
