--- a/_data/speakers.yaml
+++ b/_data/speakers.yaml
@@ -1,23 +1,24 @@
 - name: Ángeles Calduch Losa
   avatar: /assets/images/speakers/angeles_calduch.jpg
-  bio: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+  bio: "María de los Ángeles es Subdirectora de Ordenación Académica y Alumnado de la ETSINF-UPV. Se Licenció en Estadística y tiene un doctorado en Matemáticas. Ha participado en varios proyectos académicos como: MUsing Social Networks to teach in University, Depicting the visibility of private companies using web-based data, Core Skills for 21st Century Professionals (CoSki21), Teaching project. Siempre inmersa en el mundo de los datos cuenta con investigaciones como Estimating web impact evidence from interconnected data sources, Webometric methods to identify web trends in industrial sectors."
   twitter: angeles_calduch
 
 - name: Cristina Aranda
   avatar: /assets/images/speakers/cristina_aranda.jpg
-  bio: "Cristina Aranda es PR, Pre-Sales & Innovation Research en Intelygenz, empresa dedicada al desarrollo de Software (Data, API, AI, IoT...) con sedes en Madrid y San Francisco. Tiene más de 16 años de experiencia en marketing, innovación y transformación digital con empresas del Ibex35, Top500, Pymes y Startups. Además, es cofundadora de Mujeres Tech, una asociación sin ánimo de lucro que tiene por objetivo promover iniciativas entre niñas, jóvenes y mujeres y hombres para aumentar la presencia femenina en el sector digital, y, al mismo tiempo, establecer lazos con hombres dispuestos a generar la misma igualdad de oportunidad para las mujeres. doctora en Lingüística Teórica y Aplicada por la UAM y el IUI. Ortega y Gasset, licenciada en Filología Hispánica por la UAM, Máster en Internet Business por el ISDI y Digital Technology for Business Program por IGZ Academy. Ahora está profundizando en el procesamiento natural del lenguaje para su aplicación en el Internet de las cosas y la inteligencia artificial."
+  bio: "Cristina tiene más de 16 años en el mundo del marketing, la innovación y la transformación digital a través de su trabajo con Ibex35, Top500, Pymes y varias Startups la vuelven una experta en el mundo digital. Además es Cofundadora de Mujeres Tech, una asociación sin ánimo de lucro que promueve iniciativas con la presencia femenina en la tecnología y establece lazos con hombres dispuestos a generar la misma igualdad de oportunidades. Es Doctora en Lingüística Teórica y Aplicada por la UAM y el IUI. Ortega y Gasset, licenciada en Filología Hispánica por la UAM, Máster en Internet Business por el ISDI y Digital Technology for Business Program por IGZ Academy. En la actualidad trabaja en PR, Pre-Sales & Innovation Research en Intelygenz mientras profundiza en el procesamiento natural del lenguaje para su aplicación en el Internet de las cosas y la inteligencia artificial."
   twitter: cris_aranda_
 
 - name: Laura Rodriguez
   avatar: /assets/images/speakers/laura_rodriguez.jpg
-  bio: "XXXXXXXXXXXXXXXXXXXXXX"
+  bio: "Laura es Vicepresidenta actual de Analytics en ForwardKeys también ha trabajado como consultora en Aids to Navigation, ha sido Independent Business Development, Technical Commercial executive en La Maquinista Valenciana, Training Department Manager, Sertecnet en Integralia, Commercial Manager Assistant en Finisterre Seguros, S.A. Su formación académica inició con una licenciatura en Física por la UV, tiene un Máster en Data Analysis Engineeering, Process Improvement and Decision Making, Operational Research Department por la UPV, Master en Business Administration and Management, MBA por la UE. Es una pequeña parte de su amplia experiencia pues también es Diplomada en Operational Research and Systems, en Investigación Operativa y Sistemas. Se ha introducido al mundo del Data Mining, Experiments Design, Heuristics and Networks, Linear Regression Models and ANOVA, Modeling and Optimization."
   
   
 - name: Rosa Benet
   avatar: /assets/images/speakers/rosa_benet.jpg
-  bio: "XXXXXXXXXXXXXXXXXXXXX"
+  bio: "Rosa en la actualidad trabaja como Data Scientist en Cajamar e imparte cursos en la Escuela de Formación Financiera GCC. Además tiene experiencia como European Financial Advisor. Se licenció en Matemáticas y Ciencias Técnicas Estadísticas en la Universidad de Valencia. Tiene interés en el Big Data, Machine Learning, redes neuronales y su aplicación en varios campos."
   twitter: benet_rosa
 
 - name: Fernanda Peset
   avatar: /assets/images/speakers/fernanda_peset.jpg
-  bio: "Fernanda Peset es Titular de Universidad de la Universidad Politécnica de Valencia. Su docencia y publicaciones se orientan a: la comunicación científica, el acceso abierto y la implantación del protocolo OAI-PMH, la normalización de la información, la descripción de documentos, sistemas de documentación de museos y datos abiertos y enlazados.Sus últimos proyectos están relacionados con la implantación de tecnología blockchain e iniciativas para promover una economía más justa."
+  bio: "Fernanda Peset es Titular de la Universidad Politécnica de Valencia. Su docencia y publicaciones se orientan a: la comunicación científica, el acceso abierto y la implantación del protocolo OAI-PMH, la normalización de la información, la descripción de documentos, sistemas de documentación de museos y datos abiertos y enlazados. Sus últimos proyectos están relacionados con la implantación de tecnología blockchain e iniciativas para promover una economía más justa."
+  twitter: fernandapeset
