--- a/_data/partners.yaml
+++ b/_data/partners.yaml
@@ -3,5 +3,9 @@
   url: https://www.widsconference.org
 
 - name: Escuela Técnica Superior de Ingeniería Informática
-  image-url: /assets/images/logo_mugi miniatura.png
+  image-url: /assets/images/logo_etsinf.png
   url: https://www.inf.upv.es/www/etsinf/es/
+
+- name: Máster Oficial Universitario en Gestión de la Información
+  image-url: /assets/images/logo_mugi.png
+  url: http://mugi.webs.upv.es
