--- a/_data/speakers.yaml
+++ b/_data/speakers.yaml
@@ -1,6 +1,6 @@
 - name: Ángeles Calduch Losa
   avatar: /assets/images/speakers/angeles_calduch.jpg
-  bio: "María de los Ángeles es Subdirectora de Ordenación Académica y Alumnado de la ETSINF-UPV. Se Licenció en Estadística y tiene un doctorado en Matemáticas. Ha participado en varios proyectos académicos como: MUsing Social Networks to teach in University, Depicting the visibility of private companies using web-based data, Core Skills for 21st Century Professionals (CoSki21), Teaching project. Siempre inmersa en el mundo de los datos cuenta con investigaciones como Estimating web impact evidence from interconnected data sources, Webometric methods to identify web trends in industrial sectors."
+  bio: "Ángeles es Subdirectora de Ordenación Académica y Alumnado de la ETSINF-UPV. Se Licenció en Estadística y tiene un doctorado en Matemáticas. Ha participado en varios proyectos académicos como: Using Social Networks to teach in University, Depicting the visibility of private companies using web-based data, Core Skills for 21st Century Professionals (CoSki21), Teaching project. Siempre inmersa en el mundo de los datos cuenta con investigaciones como Estimating web impact evidence from interconnected data sources, Webometric methods to identify web trends in industrial sectors."
   twitter: angeles_calduch
 
 - name: Cristina Aranda
@@ -10,7 +10,7 @@
 
 - name: Laura Rodriguez
   avatar: /assets/images/speakers/laura_rodriguez.jpg
-  bio: "Laura es Vicepresidenta actual de Analytics en ForwardKeys también ha trabajado como consultora en Aids to Navigation, ha sido Independent Business Development, Technical Commercial executive en La Maquinista Valenciana, Training Department Manager, Sertecnet en Integralia, Commercial Manager Assistant en Finisterre Seguros, S.A. Su formación académica inició con una licenciatura en Física por la UV, tiene un Máster en Data Analysis Engineeering, Process Improvement and Decision Making, Operational Research Department por la UPV, Master en Business Administration and Management, MBA por la UE. Es una pequeña parte de su amplia experiencia pues también es Diplomada en Operational Research and Systems, en Investigación Operativa y Sistemas. Se ha introducido al mundo del Data Mining, Experiments Design, Heuristics and Networks, Linear Regression Models and ANOVA, Modeling and Optimization."
+  bio: "Laura es en la actualidad Vice-President Analytics en ForwardKeys. Su experiencia anterior se ha desarrollado en distintos roles técnicos y comerciales en industrias como las ayudas a la navegación, generación solar fotovoltaica o formación.  Su formación académica inició con una licenciatura en Física por la UV, tiene un Máster en Data Analysis Engineeering, Process Improvement and Decision Making, por la UPV, Máster en Business Administration and Management, MBA por la Universidad Europea de Madrid (Estema) y Diplomada en Investigación Operativa y Sistemas por la UV. En 2014 se unió al proyecto de ForwardKeys, creando y consolidando un departamento de analistas en el que la innovación y el servicio al cliente son los ejes fundamentales."
   
   
 - name: Rosa Benet
