Conference Code of Conduct

--- a/_data/footer_links.yaml
+++ b/_data/footer_links.yaml
@@ -1,3 +1,6 @@
+- name: "Código de conducta"
+  url: http://es.confcodeofconduct.com/
+
 - name: "Más eventos:"
   line_break: True
 - name: VLCTechFest
