--- a/_data/speakers.yaml
+++ b/_data/speakers.yaml
@@ -15,7 +15,7 @@
   
 - name: Rosa Benet
   avatar: /assets/images/speakers/rosa_benet.jpg
-  bio: "Rosa en la actualidad trabaja como Data Scientist en Cajamar e imparte cursos en la Escuela de Formación Financiera GCC. Además tiene experiencia como European Financial Advisor. Se licenció en Matemáticas y Ciencias Técnicas Estadísticas en la Universidad de Valencia. Tiene interés en el Big Data, Machine Learning, redes neuronales y su aplicación en varios campos."
+  bio: "Rosa en la actualidad trabaja como Data Scientist en Cajamar Data Lab. Es European Financial Advisor €FA e imparte cursos en la Escuela de Formación Financiera  del GCC. Se licenció en Matemáticas y Ciencias Técnicas Estadísticas en la Universidad de Valencia. Tiene interés en el Big Data, Machine Learning, redes neuronales y su aplicación en varios campos."
   twitter: benet_rosa
 
 - name: Fernanda Peset
