--- a/_data/faq.yaml
+++ b/_data/faq.yaml
@@ -3,6 +3,6 @@
 - question: ¿Es gratuito?
   answer: Sí, todo el evento es gratuito.
 - question: ¿A quién va dirigido este evento?
-  answer: Esta jornada va dirigida a personas, sin distinción de género, que tienen interés en Ciencia de Datos.
+  answer: Esta jornada va dirigida a personas, sin distinción de género, que tengan interés en Ciencia de Datos.
 - question: ¿Te gustaría saber más?
   answer: "Escríbenos a [widsvalencia@gmail.com](mailto:widsvalencia@gmail.com)"
