--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -1,8 +1,8 @@
-- name: Taller "Nociones estadísticas para manejo de datos" - Ángeles Calduch
+- name: <a href="#workshops">Taller "Nociones estadísticas para manejo de datos" - Ángeles Calduch</a>
   day:  1
   time: "15:30"
 
-- name: Taller "¿Cómo aprenden las máquinas? Una introducción práctica al aprendizaje automático" - Laura Sebastià
+- name: <a href="#workshops">Taller "¿Cómo aprenden las máquinas? Una introducción práctica al aprendizaje automático" - Laura Sebastià </a>
   day:  1
   time: "15:30"
 
