--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ attendees_form: https://wids-valencia-2019.eventbrite.es
 
 keywords: "conferencia, ciencia de datos, mujer, tecnología, Valencia, evento, marzo, UPV, MUGI, VLCTechHub"
 title: "WiDS Valencia"
-description: "Women in Data Science Valencia será celebrado en en 04 de marzo de 2019. El evento tiene el objetivo de inspirar personas para la Ciencia de Datos y el área de tecnología a partir de la divulgación de trabajo de mujeres científica de datos, que sea en el campo de la investigación o el mercado laboral."
+description: "WiDS Valencia tiene el objetivo de inspirar personas de todos los géneros para la Ciencia de Datos a partir de la divulgación de trabajo de mujeres científica de datos. Será celebrado en el 04 de marzo."
 ogimage: "/assets/images/Cartel.png"
 
 sass:
