--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -22,6 +22,6 @@
   day:  1
   time: "19:00"
 
-- name: Mesa redonda. Intervienen - Laura Rodríguez, Rosa Benet y Cristina Aranda. Modera - Fernanda Peset.
+- name: "Mesa redonda. Con Laura Rodríguez, Rosa Benet y Cristina Aranda. Modera: Fernanda Peset"
   day:  1
   time: "19:50"
