--- a/_data/workshop.yaml
+++ b/_data/workshop.yaml
@@ -1,5 +1,5 @@
 - name: Nociones estadísticas para manejo de datos
-  summary: "Ángeles es Subdirectora de Ordenación Académica y Alumnado de la ETSINF-UPV. Se Licenció en Estadística y tiene un doctorado en Matemáticas. Ha participado en varios proyectos académicos como: Using Social Networks to teach in University, Depicting the visibility of private companies using web-based data, Core Skills for 21st Century Professionals (CoSki21), Teaching project. Siempre inmersa en el mundo de los datos cuenta con investigaciones como Estimating web impact evidence from interconnected data sources, Webometric methods to identify web trends in industrial sectors."
+  summary: ""
   twitter: angeles_calduch
 
 - name: ¿Cómo aprenden las máquinas? Una introducción práctica al aprendizaje automático
