--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ attendees_form: https://wids-valencia-2019.eventbrite.es
 
 keywords: "conferencia, ciencia de datos, mujer, tecnología, Valencia, evento, marzo, UPV, MUGI, VLCTechHub"
 title: "WiDS Valencia"
-description: "WiDS Valencia tiene el objetivo de inspirar personas de todos los géneros para la Ciencia de Datos a partir de la divulgación de trabajo de mujeres científica de datos. Será celebrado en el 04 de marzo."
+description: "WiDS Valencia tiene el objetivo de inspirar a personas de todos los géneros para despertarles el interés por la Ciencia de Datos, a partir de la divulgación del trabajo de mujeres científicas de datos. El evento, será celebrado el 04 de marzo."
 ogimage: "/assets/images/Cartel.png"
 
 sass:
