--- a/_data/workshop.yaml
+++ b/_data/workshop.yaml
@@ -1,5 +1,5 @@
 - name: Nociones estadísticas para manejo de datos
-  summary: ""
+  summary: "En la actualidad hay una gran cantidad de datos que se representan y analizan, y sus resultados son mostrados en canales de televisión, en medios digitales… ¿Entendemos realmente lo que nos quieren decir esas representaciones? ¿Somos capaces de detectar errores o malas prácticas? En este taller se verán conceptos estadísticos básicos y se darán unas directrices para entender y analizar esta información."
   local: Lab. Radia Perlman - 1B - ETSInf
   twitter: angeles_calduch
 
