--- a/_data/partners2.yaml
+++ b/_data/partners2.yaml
@@ -5,3 +5,7 @@
 - name: ACM UPV chapter
   image-url: /assets/images/ACM Logo mini (White).png
   url: https://twitter.com/AcmUpv
+
+- name: Las Naves
+image-url: /assets/images/lasnaves.png
+url: https://www.lasnaves.com
