Review ACM logo

--- a/_data/2019/partners2.yaml
+++ b/_data/2019/partners2.yaml
@@ -3,7 +3,7 @@
   url: https://vlctechhub.org
 
 - name: ACM UPV chapter
-  image-url: /assets/images/2019/ACM Logo mini (White).png
+  image-url: /assets/images/2019/logo-mini-acm-White.png
   url: https://twitter.com/AcmUpv
 
 - name: Las Naves
