speakers and contributors added

--- a/_data/2020/partners.yaml
+++ b/_data/2020/partners.yaml
@@ -5,3 +5,7 @@
 - name: Máster Oficial Universitario en Gestión de la Información
   image-url: /assets/images/2019/logo_mugi.png
   url: http://mugi.webs.upv.es
+
+- name: VLCTechHub
+  image-url: /assets/images/2020/logo-vlctechhub.png
+  url: https://vlctechhub.org
