--- a/_data/2020/schedule.yaml
+++ b/_data/2020/schedule.yaml
@@ -1,13 +1,43 @@
 - name: <a href="#workshops">Taller "Nociones estadísticas para manejo de datos" - Ángeles Calduch</a>
   day:  1
+  time: "15:00"
+
+- name: <a href="#workshops">Taller "Aplicando NLP para extraer y estructurar información no financiera y automatizar procesos con Airflow" - Lianet Sepúlveda y Valeria Haro</a>
+  day:  1
   time: "15:30"
 
 - name: Pausa
   day:  1
-  time: "18:30"
+  time: "17:40"
 
-- name: '<a target="_blank" href="https://www.widsconference.org/marzyeh-ghassemi.html">Technical Vision Talks ​​"Improving Health Requires ​Targeting and Evidence" 
-- Marzyeh Ghassemi - Livestream WiDS Stanford</a>'
+- name: Video de Bienvenida desde WiDS Stanford
   day:  1
-  time: "19:20"
+  time: "18:00"
 
+- name: Palabras de bienvenida de WiDS Ambassadors
+  day:  1
+  time: "18:05"
+
+- name: Mariluz Congosto
+  day:  1
+  time: "18:05"
+
+- name: Carmen Torrijos
+  day:  1
+  time: "18:35"
+
+- name: Gemma Galdón
+  day:  1
+  time: "19:05"
+
+- name: Ana Freire
+  day:  1
+  time: "19:35"
+
+- name: Nerea Luis
+  day:  1
+  time: "20:05"
+
+- name: Networking time
+  day:  1
+  time: "20:40"
