--- a/_data/2020/workshop.yaml
+++ b/_data/2020/workshop.yaml
@@ -1,4 +1,10 @@
 - name: Nociones estadísticas para manejo de datos
   summary: "En la actualidad hay una gran cantidad de datos que se representan y analizan, y sus resultados son mostrados en canales de televisión, en medios digitales… ¿Entendemos realmente lo que nos quieren decir esas representaciones? ¿Somos capaces de detectar errores o malas prácticas? En este taller se verán conceptos estadísticos básicos y se darán unas directrices para entender y analizar esta información."
-  local: Lab. Radia Perlman - 1B - ETSInf
+  local: Lab. Grace Hooper - 1B - ETSInf
   twitter: angeles_calduch
+
+- name: Aplicando NLP para extraer y estructurar información no financiera y automatizar procesos con Airflow
+  summary: ""
+  local: Lab. Richard Stallman - 1B - ETSInf
+  twitter: li_sepul
+  twitter: ValeriaHaro
