Update Lianet bio

--- a/_data/2020/speakers.yaml
+++ b/_data/2020/speakers.yaml
@@ -11,7 +11,7 @@
 
 - name: Lianet Sepúlveda
   avatar: /assets/images/2020/speakers/lianet_sepulveda.jpeg
-  bio: "Lianet es ingeniera de software e investigadora de Procesamiento del Lenguaje Natural. Tiene un Doctorado en Ciencias de la Computación y un Máster en Ingeniería Eléctrica, ambos en la Universidad de São Paulo, Brasil. Es graduada de Ingenieria en Informática en el Instituto Politécnico Superior José Antonio Echeverría, La Habana, Cuba. Actualmente es Alaista de Datos y está a cargo del diseño y desarrollo de las próximas versiones de la plataforma de Inteligencia Artificial (AI) patentada por Datamaran. Lianet también es la creadora de ActivaTM (Sistema de gestión de memoria de traducción), un sistema de gestión de memoria de traducción (TM) basado en un motor de búsqueda de texto completo para el flujo de trabajo híbrido de traducción automática.ry"
+  bio: "Lianet es ingeniera de software e investigadora de Procesamiento del Lenguaje Natural. Tiene un Doctorado en Ciencias de la Computación y un Máster en Ingeniería Eléctrica, ambos en la Universidad de São Paulo, Brasil. Es graduada de Ingenieria en Informática en el Instituto Politécnico Superior José Antonio Echeverría, La Habana, Cuba. Actualmente es Analista de Datos y está a cargo del diseño y desarrollo de las próximas versiones de la plataforma de Inteligencia Artificial (AI) patentada por Datamaran. Lianet también es la creadora de ActivaTM (Sistema de gestión de memoria de traducción), un sistema de gestión de memoria de traducción (TM) basado en un motor de búsqueda de texto completo para el flujo de trabajo híbrido de traducción automática.ry"
   twitter: li_sepul
 
 - name: Ana Freire
