Add speakers linkedin

--- a/_data/2020/speakers.yaml
+++ b/_data/2020/speakers.yaml
@@ -21,7 +21,7 @@
   avatar: /assets/images/2020/speakers/ana_freire.jpg
   bio: "Ana es Ingeniera y Doctora en Informática, Investigadora y profesora Lectora del Departamento de Ingenierías y Tecnologías de la Información y las Comunicaciones. Desde 2018 coordina el Centro de Estudios sobre Sostenibilidad de esta Universidad. Sus investigaciones se centran en la aplicación de la tecnología en general, y la inteligencia artificial en particular, a diversas necesidades sociales como la sostenibilidad y la salud mental. Ha contribuido con más de 40 publicaciones científicas, varias patentes y acumula reconocimientos entre los que destaca el premio al Joven Talento Científico Femenino de la Fundación Real Academia de las Ciencias y Mastercard, y el premio Ada Byron Joven 2019 otorgado por la Universidad de Deusto. Es una gran divulgadora e impulsora de la ciencia y la tecnología entre las más jóvenes, liderando varias iniciativas para romper la brecha de género en carreras técnicas, entre ellas, el concurso internacional Fundadora de Wisibilízalas (@wisibilizalas)."
   twitter: ana__freire
-  linkedin: 
+  linkedin: freireana
 
 - name: Carmen Torrijos
   avatar: /assets/images/2020/speakers/carmen_torrijos.jpg
@@ -33,16 +33,16 @@
   avatar: /assets/images/2020/speakers/gemma_galdon.jpeg
   bio: "Gemma es socia fundadora y CEO de Éticas Research & Consulting, una SME con oficinas en España, Bélgica y Serbia. Ha sido finalista en el “European Woman Innovator of the Year”. Su trabajo hace énfasis en InteligenciaArtificial, datos y algoritmos responsables, además es analista de políticas públicas especializada en la vigilancia, el impacto social, legal y ético de la tecnología , las ciudades inteligentes, la privacidad  las políticas de seguridad, la resiliencia y la actuación policial. Realizó su PhD en Vigilancia, seguridad y políticas urbanas en la Universidad Autónoma de Barcelona, tiene un masterado en Gestión Pública y una investigación postdoctoral en el Departamento de Sociología de la Universidad de Barcelona en Políticas y Tecnologías de Seguridad. Ha sido directora del Programa de Políticas de Seguridad de la UOC (UOC). Anteriormente trabajó en el Instituto Transnacional (TNI, Amsterdam ), el Instituto de las Naciones Unidas para la Formación y la Investigación (UNITAR) y el Instituto de Seguridad Pública de Cataluña. Como académica se desenvuelve en varias universidades extranjeras, principalmente latinoamericanas, y es miembro de la Red Latinoamericana de Estudios de la Vigilancia (Lassner). Es también miembro del consejo asesor internacional de Privacy International y analista habitual en televisión, radio y prensa."
   twitter: gemmagaldon
-  linkedin:
+  linkedin: gemmagclavell
 
 - name: Mariluz Congosto
   avatar: /assets/images/2020/speakers/mariluz_congosto.jpg
   bio: "Mª Luz Congosto es Doctora en Telemática por la Universidad Carlos III y Licenciada en Informática por la UPM. Actualmente es profesora Honorífica del Departamento de Ingeniería Telemática de la Universidad Carlos III. Desde el año 2008 es investigadora de datos sociales, preferentemente en Twitter. Utiliza análisis de redes y visualización para descubrir patrones de comportamiento, propagación de mensajes y caracterización de usuarios. Del 1998 al 2008 Trabajó en Telefónica I+D en grandes proyectos de innovación en el entorno de las Telecomunicaciones para la operadora Telefónica. Del 1980 al 1984 perteneció al equipo de FUJITSU que desarrolló el software básico del TESIS-A."
   twitter: congosto
-  linkedin:
+  linkedin: congosto
 
 - name: Nerea Luis
   avatar: /assets/images/2020/speakers/nerea_luis.jpeg
   bio: "Nerea es ingeniera informática y PhD en Inteligencia Artificial. Actualmente trabaja en el equipo de Inteligencia Artificial de Sngular. En 2013 cofundó el evento gratuito de divulgación tecnológica T3chFest, con más de 2000 asistentes en la última edición. En 2016 Google la premió con la Women Techmakers Scholarship en la categoría Europea, Oriente Medio y África. Después obtuvo otra beca para acudir a la Grace Hopper Conference en Estados Unidos y eso fue lo que la unió completamente al movimiento ‘Women in Tech’. Desde entonces, participa en eventos promoviendo la inteligencia artificial y la diversidad tecnológica. En enero de 2018 se unió a la Fundación COTEC como experta en Tecnología, Talento y Género, lo cual le ha servido de altavoz para difundir sus iniciativas, ideas y conocimiento en foros con público de diferentes sectores. Ese mismo año también se unió a Ciencia en el Parlamento, donde ha podido hablar en el Congreso de los Diputados sobre Tecnologías Emergentes en el Transporte y las Comunicaciones. En 2019 fue condecorada con la medalla a la orden del mérito civil. Recientemente fue elegida entre las Top 100 mujeres líderes de España."
   twitter: sailormerqury
-  linkedin:
+  linkedin: nerealuis
