ciberdatos Mariluz Congosto, añadidos

--- a/_data/2020/speakers.yaml
+++ b/_data/2020/speakers.yaml
@@ -38,6 +38,11 @@
 - name: Mariluz Congosto
   avatar: /assets/images/2020/speakers/mariluz_congosto.jpg
   bio: "Mª Luz Congosto es Doctora en Telemática por la Universidad Carlos III y Licenciada en Informática por la UPM. Actualmente es profesora Honorífica del Departamento de Ingeniería Telemática de la Universidad Carlos III. Desde el año 2008 es investigadora de datos sociales, preferentemente en Twitter. Utiliza análisis de redes y visualización para descubrir patrones de comportamiento, propagación de mensajes y caracterización de usuarios. Del 1998 al 2008 Trabajó en Telefónica I+D en grandes proyectos de innovación en el entorno de las Telecomunicaciones para la operadora Telefónica. Del 1980 al 1984 perteneció al equipo de FUJITSU que desarrolló el software básico del TESIS-A."
+  Ciberdatos:
+  [Blog](http://barriblog)
+  Experimentos [Barómetro Social](http://t-hoarder.com) y [metroaverias](t-hoarder.com/metro_madrid)
+  [Slideshare](http://www.slideshare.net/mlcm)
+
   twitter: congosto
   linkedin: congosto
 
